--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.16.0",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
